# Journal-Sentiment

./: .env.example  .gitignore  .lefthook.yml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  fd.md  lefthook.yml  main.py  main.sh  pyproject.toml  requirements.txt  ruff.toml  setup.py
.github/workflows/: ci.yml
setup/: date_format.sh
src/schema/analysis/: analysis_data_type.py
src/schema/data_format/: analysis_data_type.py  entry_type.py
src/usecase/: __init__.py
src/usecase/analysis/: convert_score.py  sentiment.py
src/usecase/data_format/: csv_to_df.py  date_format.py  html_to_df.py  read_html.py
tests/usecase/: test_date_format.py
tests/usecase/analysis/: test_convert_score.py  test_sentiment.py
tests/usecase/data_format/: test_csv_to_df.py  test_html_to_df.py  test_read_html.py
