[project]
name = "journal-sentiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff",
    "lefthook",
    "python-dotenv",
    "pandas",
    "matplotlib",
    "pytest",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "tiktoken>=0.5.0",
    "fugashi>=1.3.0",
    "unidic-lite>=1.0.8",
    "protobuf>=3.20.0",
]
